--- a/public/css/Sidebar-Menu.css
+++ b/public/css/Sidebar-Menu.css
@@ -24,17 +24,17 @@
 .sidebar-nav {
   position: absolute;
   top: 0;
-  width: 250px;
+  width: 200px;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
 .sidebar-nav a, .dropdown-btn {
-   padding: 3px 8px 6px 16px;
+  padding: 3px 8px 6px 16px;
   text-decoration: none;
   font-size: 20px;
-  color: #818181;
+  color: #bdb8b8;
   display: block;
   border: none;
   background: none;
@@ -77,7 +77,7 @@
 
 @media (min-width:768px) {
   #sidebar-wrapper {
-    width: 250px;
+    width: 240px;
   }
 }
 
