--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,10 @@
     color: rgb(52, 122, 52);
 }
 
+#divider {
+    border-top: 4px solid white;
+}
+
 /* Stripe Form */
 .StripeElement, #card-name, #billingAddress, #name,
 #shippingAddress, #city, #state, #zip, #country, #phone{
