--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -1,9 +1,9 @@
-<div class="row mt-5">
+<div class="row my-5">
   <div class="col-md-6 m-auto">
-    <div class="card card-body" style="background-color:lightgray">
+    <div class="card card-body mx-5" style="background-color:whitesmoke">
       <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>Login</h1>
       <% include ../partials/messages %>
-        <div class="login-box-content">
+        <div class="login-box-content" style="background-color: whitesmoke">
             <div class="fb-login box-shadow">
               <a class="d-flex flex-row align-items-center social-login-link" href="/auth/facebook">
                 <i class="fab fa-facebook-f" style="margin-left:0px;padding-right:20px;padding-left:22px;width:56px;">
