--- a/views/home/contact.ejs
+++ b/views/home/contact.ejs
@@ -9,7 +9,7 @@
 </section>
 
 <section class="bg-white p-6">
-    <div class="container-fluid m-t-6 m-b-6">
+    <div class="container-fluid m-l-20 m-r-20 m-t-20 m-b-20">
         <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-5 m-t-50 m-b-50 m-l-50 m-r-50"><iframe width="100%" height="450" frameborder="0" style="border:0"
                 src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJKYVlSo3Jt4kRM2VrbIpJnOQ&key=AIzaSyAwTsbTAPKsU4X3How8AGyEOh69BbN9U7w" allowfullscreen></iframe>
