fix order total calculation

--- a/views/home/partials/header.ejs
+++ b/views/home/partials/header.ejs
@@ -82,8 +82,8 @@
                             <% if(user.role.includes('Admin') || user.role.includes('Employee')) { %>
                                 <a class="dropdown-item" href="/admin">Admin Dashboard</a>
                             <% } %>
-                            <a class="dropdown-item" href="/users/profile">Your Profile</a>
-                            <a class="dropdown-item" href="/users/order">Your Order</a>
+                            <a class="dropdown-item" href="/users/account">Your Account</a>
+                            <a class="dropdown-item" href="/users/orders">Your Orders</a>
                             <a class="dropdown-item" href="/users/changePassword">Change Your Password</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/users/logout">Log Out</a>
@@ -217,8 +217,8 @@
                                 <% if(user.role.includes('Admin') || user.role.includes('Employee')) { %>
                                     <a class="dropdown-item" href="/admin">Admin Dashboard</a>
                                 <% } %>
-                                <a class="dropdown-item" href="/users/profile">Your Profile</a>
-                                <a class="dropdown-item" href="/users/order">Your Order</a>
+                                <a class="dropdown-item" href="/users/account">Your Account</a>
+                                <a class="dropdown-item" href="/users/orders">Your Orders</a>
                                 <a class="dropdown-item" href="/users/changePassword">Change Your Password</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/users/logout">Log Out</a>
