--- a/views/home/checkout.ejs
+++ b/views/home/checkout.ejs
@@ -117,13 +117,13 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-12 col-lg-12">
                         <h2 class="m-l-15 m-t-10 m-b-10">Review items and shipping</h2>
-                        <div class="container">
+                        <div class="container-fluid">
                             <div class="row">
                                 <div class="table table-responsive col-sm-12 col-md-6 col-lg-6">
                                     <table>
                                         <tbody>
                                             <% products.forEach(function(product) { %>
-                                            <tr class="mw-100 p-3">
+                                            <tr class="m-100 p-3">
                                                 <td class="h-50 mx-auto my-auto">
                                                     <img src="<%= product.item.imageUrl[0] %>" alt="image" class="img-fluid img-responsive img-thumbnail rounded" width="100px" height="100%"/>
                                                 </td>
@@ -188,7 +188,9 @@
                 <div class="container">
                     <div class="justify-content-center m-t-10 m-b-10">
                         <button type="submit" class="btn flex-c-m size2 bg4 bo-rad-23 hov1 m-text3 trans-0-4">Place Your Order</button>
-                        <span><p class="text-center">By placing your order, you agree to Wallpaper's <a href="#">privacy notice</a> and <a href="#">conditions of use</a>.</p></span>
+                        <div class="container">
+                            <span><p class="text-center">By placing your order, you agree to Wallpaper's <a href="#">privacy notice</a> and <a href="#">conditions of use</a>.</p></span>
+                        </div>
                     </div>
                     <hr/>   
                     <div>
