--- a/views/home/partials/banner2.ejs
+++ b/views/home/partials/banner2.ejs
@@ -3,8 +3,15 @@
         <div class="row">
             <div class="col-sm-10 col-md-8 col-lg-6 m-l-r-auto p-t-15 p-b-15">
                 <div class="hov-img-zoom pos-relative">
-                    <img src="images/banner-08.jpg" alt="IMG-BANNER">
+                    <div class="embed-responsive embed-responsive-4by3">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
 
+            <div class="col-sm-10 col-md-8 col-lg-6 m-l-r-auto p-t-15 p-b-15">
+                <div class="bgwhite hov-img-zoom pos-relative p-b-20per-ssm">
+                    <img src="images/shop-item-09.jpg" alt="IMG-BANNER">
                     <div class="ab-t-l sizefull flex-col-c-m p-l-15 p-r-15">
                         <span class="m-text9 p-t-45 fs-20-sm">
                             The Beauty
@@ -18,14 +25,7 @@
                             View Collection
                         </a>
                     </div>
-                </div>
-            </div>
-
-            <div class="col-sm-10 col-md-8 col-lg-6 m-l-r-auto p-t-15 p-b-15">
-                <div class="bgwhite hov-img-zoom pos-relative p-b-20per-ssm">
-                    <img src="images/shop-item-09.jpg" alt="IMG-BANNER">
-
-                    <div class="ab-t-l sizefull flex-col-c-b p-l-15 p-r-15 p-b-20">
+                    <!-- <div class="ab-t-l sizefull flex-col-c-b p-l-15 p-r-15 p-b-20">
                         <div class="t-center">
                             <a href="product-detail.html" class="dis-block s-text3 p-b-5">
                                 Gafas sol Hawkers one
@@ -81,7 +81,7 @@
                                 </span>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
