--- a/views/home/product-detail.ejs
+++ b/views/home/product-detail.ejs
@@ -66,8 +66,8 @@
             </p>
 
             <!--  -->
-            <div class="p-t-33 p-b-60">
-                <div class="flex-m flex-w p-b-10">
+            <div class="p-t-40 p-b-40">
+                <div class="d-flex justify-content-center p-b-10">
                     <div class="s-text15 w-size15 t-center">
                         Size
                     </div>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
 
-                <div class="flex-m flex-w">
+                <div class="d-flex justify-content-center">
                     <div class="s-text15 w-size15 t-center">
                         Color
                     </div>
@@ -99,7 +99,7 @@
                     </div>
                 </div>
 
-                <div class="flex-r-m flex-w p-t-10">
+                <div class="d-flex justify-content-center p-t-10">
                     <div class="w-size16 flex-m flex-w">
                         <div class="flex-w bo5 of-hidden m-r-22 m-t-10 m-b-10">
                             <button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2">
