--- a/views/home/partials/header.ejs
+++ b/views/home/partials/header.ejs
@@ -36,11 +36,11 @@
                          </li>
 
                         <li>
-                            <a href="/products">Shop</a>
+                            <a href="/products?pageNum=1&size=12">Shop</a>
                         </li>
 
                         <li class="sale-noti">
-                            <a href="/products/onSale">Sale <i class="fas fa-fire-alt" color="red"></i></a>
+                            <a href="/products/onSale?pageNum=1&size=12">Sale <i class="fas fa-fire-alt" color="red"></i></a>
                         </li>
 
                         <li>
@@ -180,11 +180,11 @@
                 </li>
 
                 <li class="item-menu-mobile">
-                    <a href="/products">Shop</a>
+                    <a href="/products?pageNum=1&size=12">Shop</a>
                 </li>
 
                 <li class="item-menu-mobile">
-                    <a href="/products/onSale">Sale</a>
+                    <a href="/products/onSale?pageNum=1&size=12">Sale</a>
                 </li>
 
                 <li class="item-menu-mobile">
