--- a/views/admin/sidebar-wrapper.ejs
+++ b/views/admin/sidebar-wrapper.ejs
@@ -128,6 +128,17 @@
         </div>
 
         <div class="container-fluid">
+            <a href="/admin/instagram" class="text-center">
+                <div>
+                    <i class="fab fa-instagram fa-2x"></i>
+                </div>
+                <div>
+                    <p>Instagram</p>
+                </div> 
+            </a>
+        </div>
+
+        <div class="container-fluid">
             <a href="/admin/messaging" class="text-center">
                 <div>
                     <i class="fa fa-envelope fa-2x"></i>
