--- a/views/home/products.ejs
+++ b/views/home/products.ejs
@@ -88,8 +88,8 @@
                     <div class="col-sm-12 col-md-6 col-lg-4 p-b-50">
                         <!-- Block2 -->
                         <div class="block2">
-                            <!-- <div class="block2-img wrap-pic-w of-hidden pos-relative block2-labelnew"> -->
-                            <div class="block2-img wrap-pic-w of-hidden pos-relative">
+                            <!-- <div class="block2-img wrap-pic-w of-hidden pos-relative "> -->
+                            <div class="block2-img wrap-pic-w of-hidden pos-relative <%if (product.isSale) { %>block2-labelsale <% } else { %> block2-labelnew <% } %>">
                                 <img src="<%= product.imageUrl[0] %>" alt="IMG-PRODUCT">
         
                                 <div class="block2-overlay trans-0-4">
@@ -108,12 +108,12 @@
                             </div>
         
                             <div class="block2-txt p-t-20">
-                                <a href="/products/<%= product._id %>/" class="block2-name dis-block s-text3 p-b-5">
+                                <a href="/products/pid/<%= product._id %>" class="block2-name dis-block s-text3 p-b-5">
                                     <%= product.name %>
                                 </a>
         
-                                <span class="block2-price m-text6 p-r-5">
-                                    $<%= product.regularPrice %>
+                                <span class="block2-price m-text6 p-r-5 text-danger">
+                                    <% if(product.isSale) { %> <del>$<%= product.regularPrice %></del> $<%= product.discountPrice %> <%} else { %> $<%= product.regularPrice %> <% } %>
                                 </span>
                             </div>
                         </div>
