--- a/views/admin/productForm.ejs
+++ b/views/admin/productForm.ejs
@@ -109,9 +109,11 @@
                                         <input 
                                             class="form-control text-box"
                                             type="number"
+                                            min="0"
+                                            step="any"
                                             id="regularPrice"
                                             name="regularPrice"
-                                            placeholder="0.000"
+                                            placeholder="0.00"
                                         />
                                     </div>
                                 </div>
@@ -126,7 +128,7 @@
                                         type="number"
                                         id="discountPrice"
                                         name="discountPrice"
-                                        placeholder="0.000"
+                                        placeholder="0.00"
                                         />
                                     </div>
                                 </div>
