--- a/public/css/Sidebar-Menu-1.css
+++ b/public/css/Sidebar-Menu-1.css
@@ -47,14 +47,14 @@ body {
 .sidebar-nav {
   position: absolute;
   top: 0;
-  width: 250px;
+  width: 100%;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
 .sidebar-nav  a, .dropdown-btn {
-  text-indent: 20px;
+  text-indent: 0;
   line-height: 40px;
   display: block;
   text-decoration: none;
