--- a/public/css/Sidebar-Menu.css
+++ b/public/css/Sidebar-Menu.css
@@ -24,10 +24,13 @@
 .sidebar-nav {
   position: absolute;
   top: 0;
-  width: 200px;
+  width: 100%;
   margin: 0;
   padding: 0;
   list-style: none;
+}
+.sidebar-nav .container {
+  margin-top: 15px;
 }
 
 .sidebar-nav a, .dropdown-btn {
