--- a/views/admin/productForm.ejs
+++ b/views/admin/productForm.ejs
@@ -94,6 +94,8 @@
                                         <input 
                                             class="form-control text-box"
                                             type="number"
+					    min=0
+					    step=1
                                             id="quantity"
                                             name="quantity"
                                             placeholder="Enter the number of products"
@@ -109,8 +111,8 @@
                                         <input 
                                             class="form-control text-box"
                                             type="number"
-                                            min="0"
-                                            step="any"
+                                            min=0
+                                            step=0.25
                                             id="regularPrice"
                                             name="regularPrice"
                                             placeholder="0.00"
@@ -126,6 +128,8 @@
                                         <input 
                                         class="form-control text-box"
                                         type="number"
+					min=0
+					step=0.25
                                         id="discountPrice"
                                         name="discountPrice"
                                         placeholder="0.00"
